# fyers-auto-auth

./: .gitignore  README.md  auth.py  generate_fernet_key.py  man.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-package-publish.yml
fyers_auto_auth/: __init__.py  auth.py  cli.py  encryption.py  setup_app.py
tests/: test_auth.py  test_cli.py  test_encryption.py
